<resources>
    <string name="app_name">PassGuard</string>

    <!--    EditText    -->

    <string name="username">Nome de usuário</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="code">Código</string>
    <string name="confirmPassword">Confirmar Senha</string>
    <string name="confirmEmail">Confirmar Email</string>

    <!--    Botões     -->

    <string name="login">Entra</string>
    <string name="loginPassword">Entrar com senha</string>
    <string name="loginCode">Entrar com codigo</string>
    <string name="createAccount">Criar Conta</string>

    <!--    Menu      -->

    <string name="addPassword">Adicionar</string>
    <string name="settings">Configurações</string>
    <string name="logout">Sair</string>
    <string name="help">Ajuda</string>

    <!--    Card     -->

    <string name="delete">Apagar</string>
    <string name="edit">Editar</string>

    <!--    Error    -->

    <string name="confirmPasswordError">As senhas devem ser iguais</string>
    <string name="confirmEmailError">Os emails devem ser iguais</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Add Register -->

    <string name="addDescription">Descrição</string>
    <string name="addContent">Senha</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>

    <!-- List -->
    <string name="search">Pesquisar Descrição</string>
    <string name="deleteAccount">Excluir conta</string>

    <!-- Help -->
    <string name="helpText">
        Clique no botão adicionar na parte inferior da tela.
        Digite a descrição da conta a quem pertence a senha (Ex: Email, Stream de mídia, Conta do Banco, etc.).
        Digite qual a senha.
        Clique em salvar.
        Caso queira alterar seus dados, clique no botão de configurações.
        Caso queira excluir a sua conta, clique no menu > Excluir conta.
    </string>
    <string name="close">Fechar</string>

    <!-- Authentication -->
    <string name="authentication">Código ou senha</string>

    <!-- Messages -->
    <string name="incorrectPassword">Senha incorreta</string>
    <string name="incorrectCode">Código incorreto</string>
    <string name="incorrectEmail">Email incorreto</string>
    <string name="invalidEmail">Email inválido</string>
    <string name="invalidPassword">Senha inválida</string>
    <string name="emptyEmail">Email é obrigatório</string>
    <string name="emptyPassword">Senha é obrigatória</string>
    <string name="userAuthenticated">Usuário autenticado</string>
    <string name="errorCreatingAccount">Não foi possível criar sua conta</string>
    <string name="notEqualEmail">Os emails devem ser iguais</string>
    <string name="notEqualPasswords">As senhas devem ser iguais</string>
</resources>